--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --inspect-brk='0.0.0.0' test.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ewelink-api": "^3.1.1"
+    "ewelink-api": "^3.1.1",
+    "pino": "^8.4.0",
+    "telegraf": "^4.8.6"
   }
 }
