--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   app:
-    image: ghcr.io/Turcheg/tg-shlagbaum:latest
+    image: ghcr.io/turcheg/tg-shlagbaum:latest
     build: .
     env_file:
       - .env
