--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
-USERS="123,1234"
 USERS_DB_FILE="/app/users.json"
+JOURNAL_TG_ID=123
 BOT_TOKEN="1234567890:JjUahOoituOaiAF-K8Ara86qWeU9M4j4"
 CHAT_ID=1234567
 
