--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "tg-shlagbaum",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "index.js",
   "types": "src/types.ts",
   "tsup": {
@@ -14,8 +13,10 @@
     "clean": true
   },
   "scripts": {
+    "dev": "node do-nothing.js",
+    "inspect": "ts-node --inspect index.ts",
     "build": "tsup-node",
-    "start": "node index.js",
+    "start": "node dist/index.js",
     "test": "jest",
     "lint": "eslint ."
   },
@@ -25,6 +26,7 @@
     "ewelink-api": "^3.1.1",
     "pino": "^8.4.0",
     "telegraf": "^4.8.6",
+    "ts-node": "^10.9.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
