--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "ISC",
   "dependencies": {
     "ewelink-api": "^3.1.1",
+    "lodash": "^4.17.21",
     "pino": "^8.4.0",
     "telegraf": "^4.8.6",
     "ts-node": "^10.9.1",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
     "@types/jest": "^28.1.6",
+    "@types/lodash": "^4.14.183",
     "@types/mocha": "^9.1.1",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
